<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raniamofeed.songsbank.ForgetAndContact.Forget_Password">

    <ImageView
        android:id="@+id/imageButtonforget"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/splashsceern"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/lo"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/textforegetpassword1"
        android:textColor="@color/login"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonforget" />

    <TextView
        android:id="@+id/lo3"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:text="We  just need your Email address"
        android:textColor="@color/login"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lo"
        app:layout_constraintStart_toStartOf="@+id/lo"
        app:layout_constraintTop_toBottomOf="@+id/lo" />

    <TextView
        android:id="@+id/lo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/textforegetpassword3"
        android:textColor="@color/login"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo3" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/avatar"
        android:drawablePadding="60dp"
        android:ems="10"
        android:hint="@string/eaddress"
        android:inputType="textEmailAddress"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lo4"
        />

    <Button
        android:id="@+id/Reset"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/login"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/resetpassword"
        android:textColor="#fff"
        android:inputType="textEmailAddress"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailaddress"
        app:layout_constraintVertical_bias="0.257" />



</android.support.constraint.ConstraintLayout>
