<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_fragment">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:orientation="horizontal">
            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="@string/text4"
                            android:textColor="#8725cd"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/f4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="37dp"
                                android:layout_marginTop="11dp"
                                android:padding="12dp"
                                android:text="E"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:id="@+id/Nm4"
                                android:layout_marginRight="100dp"
                                android:text="@string/text4_1"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:textColor="#8725cd"
                            android:padding="12dp"
                            android:gravity="right"
                            android:text="@string/recent_news"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/f1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignTop="@+id/N1"
                                android:layout_marginEnd="37dp"
                                android:layout_marginTop="11dp"
                                android:padding="12dp"
                                android:text="E"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:id="@+id/N1"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="80dp"
                                android:text="@string/text1"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="@string/text2"
                            android:textColor="#8725cd"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/f2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="37dp"
                                android:layout_marginTop="11dp"
                                android:padding="12dp"
                                android:text="E"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/Nn2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="80dp"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:text="@string/text2_1"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="12dp"
                            android:text="@string/text3"
                            android:textColor="#8725cd"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/f3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="37dp"
                                android:layout_marginTop="11dp"
                                android:padding="12dp"
                                android:text="E"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:padding="12dp"
                                android:id="@+id/Nm3"
                                android:layout_marginRight="100dp"
                                android:text="@string/text3_1"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </android.support.v4.widget.NestedScrollView>




        </LinearLayout>


    </FrameLayout>

</LinearLayout>
