<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_top">
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/titlebar_menu_selector"
                android:id="@+id/title_bar_left_menu"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="Suggest Song"
                android:textSize="24sp"
                android:textColor="#999999"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="@drawable/titlebar_menu_selector"
                android:id="@+id/title_bar_right_menu"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#ebebeb"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_fragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="118dp"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/splashsceern" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="80dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/namesong_sugtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:padding="10dp"
                            android:text="@string/sub"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="20sp"
                            android:layout_gravity="right"
                            android:textStyle="italic" />

                        <EditText
                            android:id="@+id/namesongedit_suggest"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#11000000"
                            android:inputType="text"
                            android:paddingRight="15dp"
                            android:textDirection="rtl" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="right"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/key_suggest"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:gravity="right"
                                android:text="@string/sub1"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="italic"
                                android:padding="10dp"/>

                            <ImageButton
                                android:id="@+id/keys_suggest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="82dp"
                                android:background="@drawable/sortdown" />
                        </RelativeLayout>
                        <TextView
                            android:id="@+id/keytext_suggest"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:background="#11000000"
                            android:inputType="text"
                            android:paddingRight="15dp"
                            android:paddingTop="10dp"
                            android:textDirection="rtl" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/subject_suggest"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:gravity="right"
                                android:text="@string/sub2"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp"
                                android:textStyle="italic"
                                android:padding="10dp"/>

                            <ImageButton
                                android:id="@+id/subjectimage_suggest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentStart="true"
                                android:layout_marginStart="82dp"
                                android:background="@drawable/sortdown" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/subjesttext_suggest"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentTop="true"
                            android:background="#11000000"
                            android:inputType="text"
                            android:paddingRight="15dp"
                            android:paddingTop="10dp"
                            android:textDirection="rtl" />
                        <TextView
                            android:id="@+id/Verses_sugtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/sub3"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="20sp"
                            android:layout_gravity="right"
                            android:textStyle="italic" />

                        <EditText
                            android:id="@+id/versrsedit_suggest"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#11000000"
                            android:inputType="text"
                            android:paddingRight="15dp"
                            android:textDirection="rtl" />
                        <TextView
                            android:id="@+id/words_sugtext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:text="@string/sub4"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="20sp"
                            android:layout_gravity="right"
                            android:textStyle="italic" />

                        <EditText
                            android:id="@+id/Wordedit_suggest"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#11000000"
                            android:inputType="text"
                            android:paddingRight="15dp"
                            android:textDirection="rtl" />
                        <Button
                            android:id="@+id/btn_updoad_su"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="60dp"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="40dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/border2"
                            android:text="حفــظ"
                            android:textColor="@color/colorPrimaryText" />
                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
